--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,19 +164,20 @@
        "249"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Checking the number of mice.\n",
+    "#I looked up on chatgpt .nunique to count the number of unique values \n",
     "combined_data[\"Mouse ID\"].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +412,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +557,7 @@
        "248"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -727,22 +728,28 @@
        "Zoniferol                   6.966589                0.516398  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "\n",
+    "mean = cleaned_df.groupby('Drug Regimen')['Tumor Volume (mm3)'].mean()\n",
+    "median = cleaned_df.groupby('Drug Regimen')['Tumor Volume (mm3)'].median()\n",
+    "var = cleaned_df.groupby('Drug Regimen')['Tumor Volume (mm3)'].var()\n",
+    "std = cleaned_df.groupby('Drug Regimen')['Tumor Volume (mm3)'].std()\n",
+    "sem = cleaned_df.groupby('Drug Regimen')['Tumor Volume (mm3)'].sem()\n",
     "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen:\n",
     "# mean, median, variance, standard deviation, and SEM of the tumor volume.\n",
-    "# Assemble the resulting series into a single summary DataFrame.\n"
+    "# Assemble the resulting series into a single summary DataFrame.\n",
+    "stats_summary = pd.DataFrame({'Mean Tumor Volume': mean, 'Median Tumor Volume': median, 'Tumor Volume Variance': var, 'Tumor Volume Std. Dev.': std, 'Tumor Volume Std. Err.': sem})\n",
+    "stats_summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -758,27 +765,19 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
+       "    .dataframe thead th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th colspan=\"5\" halign=\"left\">Tumor Volume (mm3)</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>median</th>\n",
-       "      <th>var</th>\n",
-       "      <th>std</th>\n",
-       "      <th>sem</th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Var</th>\n",
+       "      <th>Std</th>\n",
+       "      <th>SEM</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Drug Regimen</th>\n",
@@ -875,22 +874,21 @@
        "</div>"
       ],
       "text/plain": [
-       "             Tumor Volume (mm3)                                          \n",
-       "                           mean     median        var       std       sem\n",
-       "Drug Regimen                                                             \n",
-       "Capomulin             40.675741  41.557809  24.947764  4.994774  0.329346\n",
-       "Ceftamin              52.591172  51.776157  39.290177  6.268188  0.469821\n",
-       "Infubinol             52.884795  51.820584  43.128684  6.567243  0.492236\n",
-       "Ketapril              55.235638  53.698743  68.553577  8.279709  0.603860\n",
-       "Naftisol              54.331565  52.509285  66.173479  8.134708  0.596466\n",
-       "Placebo               54.033581  52.288934  61.168083  7.821003  0.581331\n",
-       "Propriva              52.320930  50.446266  43.852013  6.622085  0.544332\n",
-       "Ramicane              40.216745  40.673236  23.486704  4.846308  0.320955\n",
-       "Stelasyn              54.233149  52.431737  59.450562  7.710419  0.573111\n",
-       "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
+       "                   Mean     Median        Var       Std       SEM\n",
+       "Drug Regimen                                                     \n",
+       "Capomulin     40.675741  41.557809  24.947764  4.994774  0.329346\n",
+       "Ceftamin      52.591172  51.776157  39.290177  6.268188  0.469821\n",
+       "Infubinol     52.884795  51.820584  43.128684  6.567243  0.492236\n",
+       "Ketapril      55.235638  53.698743  68.553577  8.279709  0.603860\n",
+       "Naftisol      54.331565  52.509285  66.173479  8.134708  0.596466\n",
+       "Placebo       54.033581  52.288934  61.168083  7.821003  0.581331\n",
+       "Propriva      52.320930  50.446266  43.852013  6.622085  0.544332\n",
+       "Ramicane      40.216745  40.673236  23.486704  4.846308  0.320955\n",
+       "Stelasyn      54.233149  52.431737  59.450562  7.710419  0.573111\n",
+       "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +897,9 @@
     "# A more advanced method to generate a summary statistics table of mean, median, variance, standard deviation,\n",
     "# and SEM of the tumor volume for each regimen (only one method is required in the solution)\n",
     "\n",
-    "# Using the aggregation method, produce the same summary statistics in a single line\n"
+    "# Using the aggregation method, produce the same summary statistics in a single line\n",
+    "agg_stats_summary = cleaned_df.groupby('Drug Regimen')['Tumor Volume (mm3)'].agg(Mean='mean', Median='median', Var='var', Std='std', SEM='sem')\n",
+    "agg_stats_summary"
    ]
   },
   {
