I added the analysis report for the data at the top

--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -10,7 +10,21 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "This analysis examines data from a study using mice to evaluate the efficacy of various cancer drugs. The study included an approximately equal number of male and female mice with tumors, tracking tumor volumes from the start of the trial and at specific timepoints after administering the drugs.\n",
+    "\n",
+    "### Comparison of Drug Regimens\n",
+    "To begin, I created a bar graph to compare all the drugs in the study's regimen and determine which might be more effective. Capomulin and Ramicane stood out with the highest number of observed timepoints, suggesting they had the most detailed data and potentially the greatest impact on tumor volume.\n",
+    "\n",
+    "Next, I focused on just four drug regimens. Once again, Capomulin and Ramicane emerged as the better performers. This conclusion is supported by the shorter boxes in the boxplot, which indicate a smaller Interquartile Range (IQR). A smaller IQR demonstrates that the drugs have consistent effects across treated mice. Consistency is a crucial factor in drug studies, as it translates to more reliable and predictable outcomes.\n",
+    "\n",
+    "### Capomulin Tumor Response Over Time\n",
+    "To gain further insight, I isolated the results for the drug Capomulin. The line graph revealed an interesting pattern: initially, the tumor volume appeared to increase after treatment began. However, by the 20-day mark, the tumor volume shrank dramatically. After this, there was a slight rebound in size before another significant reduction. This line graph highlights Capomulin’s strong response in reducing tumor volume over time.\n",
+    "\n",
+    "### Correlation Between Weight and Tumor Volume\n",
+    "Finally, I examined the relationship between mouse weight and average tumor volume for the Capomulin regimen. A scatter plot with a linear regression model revealed a positive correlation between weight and tumor volume, meaning that heavier mice tended to have larger tumors. While this trend was evident, some variability suggests that other factors may influence tumor size. This relationship could indicate the need for further studies to explore whether drug dosage adjustments based on weight might improve consistency in outcomes.\n",
+    "\n",
+    "### Conclusion\n",
+    "In Conclusion, Capomulin appears to have great potential in reducing tumor size consistently and effectively. Its strong response and consistent results make it a promising candidate for further research and development. \n",
     " "
    ]
   },
@@ -1749,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1873,7 @@
        "229    Male           7          21  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1870,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2077,7 @@
        "y793               38.506829        17.0"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2076,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -2107,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
